[package]
name = "udp_hole_punching"
version = "2.0.0"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "A udp punching tool for peer to peer connection."
license = "MIT"
homepage = "https://github.com/wangmarkqi/udp_hole_punching.git"
repository = "https://github.com/wangmarkqi/udp_hole_punching.git"
documentation = "https://github.com/wangmarkqi/search_json.git"

#git branch --set-upstream-to=origin/master master
#git checkout -b release-1.0
#git checkout release-1.0
#git checkout master
[lib]
name = "udp_hole_punching"
path = "src/lib.rs"
[[bin]]
name = "udp_hole_punching"
path = "src/bin.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[workspace]
#members = [
#"punching_client",
#"punching_server"
#]
[dependencies]
async-std = "1.6.2"
anyhow = "1.0.31"
once_cell = "1.4.0"
async-trait="0.1.36"
#punching_server = { path = "./punching_server",version="0.1.1"}
#punching_client= { path = "./punching_client" ,version="0.1.1"}
