[package]
name = "udp_hole_punching"
version = "2.0.8"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "A udp punching tool for peer to peer connection."
license = "MIT"
homepage = "https://github.com/wangmarkqi/udp_hole_punching.git"
repository = "https://github.com/wangmarkqi/udp_hole_punching.git"
documentation = "https://github.com/wangmarkqi/search_json.git"

#git branch --set-upstream-to=origin/master master
#git checkout -b release-1.0
#git checkout release-1.0
#git checkout master
[lib]
name = "udp_hole_punching"
path = "src/lib.rs"
[[bin]]
name = "udp_hole_punching"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.31"
once_cell = "1.4.0"
async-std = "1.6.2"
serde = { version = "1.0", features = ["derive"] }
bincode="1.3.1"
rand="0.7.3"
sled="0.34.6"
async-trait = "0.1.42"
