[package]
name = "punching_server"
version = "0.1.0"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "A udp punching tool for peer to peer connection."
license = "MIT"
homepage = "https://github.com/wangmarkqi/udp_hole_punching.git"
repository = "https://github.com/wangmarkqi/udp_hole_punching.git"
documentation = "https://github.com/wangmarkqi/search_json.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
anyhow = "1.0.31"
lazy_static = "1.4.0"
rand="0.7.3"
serde = { version = "1.0.90", features = ["derive"]}
bincode="1.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
