[package]
name = "punching_server"
version = "0.1.1"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "A udp punching tool for peer to peer connection."
license = "MIT"
homepage = "https://github.com/wangmarkqi/udp_hole_punching.git"
repository = "https://github.com/wangmarkqi/udp_hole_punching.git"
documentation = "https://github.com/wangmarkqi/search_json.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#git branch --set-upstream-to=origin/master master
#git checkout -b release-1.0
#git checkout release-1.0
#git checkout master

[dependencies]
async-std = "1.6.2"
anyhow = "1.0.31"
